--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,18 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import HeroSection from '../components/HeroSection.astro';
+import HeroWrapper from '../components/HeroWrapper.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import { getCollection } from 'astro:content';
+import FormattedDate from '../components/FormattedDate.astro';
+import { Image } from 'astro:assets';
+
+const posts = (await getCollection('blog')).sort(
+	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
+);
+
+const latestPost = posts[0];
 ---
 
 <!doctype html>
@@ -11,7 +22,20 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<body>
-		<Header />
+		<HeroWrapper>
+			<Header isHomePage={true} />
+			{latestPost && (
+				<HeroSection
+					title={latestPost.data.title}
+					description={latestPost.data.description}
+					pubDate={latestPost.data.pubDate}
+					heroImage={latestPost.data.heroImage}
+					slug={latestPost.id}
+					scientist={latestPost.data.scientist}
+					tool={latestPost.data.tool}
+				/>
+			)}
+		</HeroWrapper>
 		<main>
 		</main>
 		<Footer />
