--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,8 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap');
+
 :root {
 	--accent: #2337ff;
 	--accent-dark: #000d8a;
@@ -16,8 +18,11 @@
 		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 
-	--fg: rgb(var(--black));
-	--bg: rgb(var(--gray-light));
+	/* Site color scheme */
+	--cream: #f5f5dc;
+	--dark-brown: #3e2723;
+	--fg: var(--dark-brown);
+	--bg: var(--cream);
 }
 @font-face {
 	font-family: 'Atkinson';
@@ -33,18 +38,22 @@
 	font-style: normal;
 	font-display: swap;
 }
+html {
+	overflow-x: hidden;
+}
+
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: 'Crimson Text', serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
-	background-size: 100% 600px;
+	background: var(--bg);
 	word-wrap: break-word;
 	overflow-wrap: break-word;
-	color: rgb(var(--gray-dark));
+	color: var(--fg);
 	font-size: 20px;
 	line-height: 1.7;
+	overflow-x: hidden;
 }
 main {
 	width: 720px;
@@ -58,9 +67,11 @@ h3,
 h4,
 h5,
 h6 {
+	font-family: 'Playfair Display', serif;
 	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
+	color: var(--fg);
 	line-height: 1.2;
+	font-weight: 600;
 }
 h1 {
 	font-size: 3.052em;
