--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -10,8 +10,7 @@ const { date } = Astro.props;
 	{
 		date.toLocaleDateString('en-us', {
 			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
+			month: 'long',
 		})
 	}
 </time>
