--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,16 +4,17 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import HeroSection from '../components/HeroSection.astro';
 import HeroWrapper from '../components/HeroWrapper.astro';
+import BlogGrid from '../components/BlogGrid.astro';
+import VineBorder from '../components/VineBorder.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import { getCollection } from 'astro:content';
-import FormattedDate from '../components/FormattedDate.astro';
-import { Image } from 'astro:assets';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 
 const latestPost = posts[0];
+const olderPosts = posts.slice(1);
 ---
 
 <!doctype html>
@@ -36,8 +37,18 @@ const latestPost = posts[0];
 				/>
 			)}
 		</HeroWrapper>
-		<main>
-		</main>
+		<div class="home-main">
+			<h3 class="main-quote">It is no longer I who live, but Christ lives in me.</h3>
+			<div class="vine-border-wrapper">
+				<VineBorder />
+			</div>
+			{olderPosts.length > 0 && (
+				<BlogGrid posts={olderPosts} title="Older Editions" />
+			)}
+		</div>
 		<Footer />
 	</body>
 </html>
+
+<style>
+</style>
