--- a/src/components/HeroWrapper.astro
+++ b/src/components/HeroWrapper.astro
@@ -138,7 +138,7 @@ const { class: className } = Astro.props;
 	
 	.wavy-border {
 		position: absolute;
-		bottom: 0;
+		bottom: -1px;
 		left: 0;
 		right: 0;
 		z-index: 3;
