--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -23,7 +23,7 @@ const { title, description, pubDate, updatedDate, heroImage, heroAlt } = Astro.p
 				<div class="hero-image">
 					{heroImage && (
 						<figure>
-							<Image width={1020} height={510} src={heroImage} alt={heroAlt || title} />
+							<Image width={1020} height={510} src={heroImage} alt={heroAlt || title} loading="eager" />
 							{heroAlt && <figcaption>{heroAlt}</figcaption>}
 						</figure>
 					)}
